# ZJU-CV-HW

./: README.md
HW1/: CMakeLists.txt  main.cpp
HW2/: CMakeLists.txt  main.cpp
HW3/: CMakeLists.txt  main.cpp
HW4/: CIFAR_train.py  MNIST_train.py  lenet5.py  resnet.py
HW5/: README.md  myreconstruct.py  mytrain.py  reconstruct_batch.py  reconstruct_mnist_batch.py
HW5/HTML/: app.py  index.html
HW5/data_process/: label_my_eyes.py  prepare_mnist.py  preprocess_my_face.py
HW5/eigenx/: __init__.py  align.py  datasets.py  model_io.py  pca.py  visualize.py
HW5/models/: face_model_aligned.npz  mnist_7_model.npz
HW5/results/faces/: energy_curve.csv
HW5/results/mnist_7/: energy_curve.csv
